[project]
authors = [
  {name = "Stephan Fitzpatrick", email = "knowsuchagency@gmail.com"},
]
dependencies = []
description = "Cloud workflows made simple."
dynamic = ["classifiers"]
keywords = ["orchestration", "aws", "cloud"]
license = {text = "MIT"}
name = "orkestra"
requires-python = ">=3.8"
version = "0.3.0"
readme = "README.md"

[project.urls]
Repository = "https://github.com/knowsuchagency/orkestra"
homepage = "https://github.com/knowsuchagency/orkestra"
Documentation = "https://knowsuchagency.github.io/orkestra/"

[project.optional-dependencies]
cdk = [
  "aws-cdk.core",
  "aws-cdk.aws_events",
  "aws-cdk.aws_events_targets",
  "aws-cdk.aws_lambda_python",
  "aws-cdk.aws_stepfunctions_tasks",
]
powertools = [
  "aws-lambda-powertools[pydantic]",
  # email is a required dependency
  # of powertools[pydantic]
  "pydantic[email]"
]

[build-system]
build-backend = "pdm.pep517.api"
requires = ["pdm-pep517"]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.history
  | _build
  | buck-out
  | build
  | dist
  | __pypackages__
  | cdk.out
)/
'''

[tool.pdm.dev-dependencies]
dev = [
    "klaxon",
    "mkdocs-material",
    "pre-commit~=2.12",
    "black~=21.5b1",
    "aws-lambda-powertools~=1.16",
]

[tool.pdm.scripts]
_.env_file = ".env"

format = "black ./"

synth = "cdk synth"

deploy.shell = """
set -ex
pdm run format
cdk deploy --verbose --require-approval=never
klaxon --title orkestra --subtitle deployed
"""

destroy.shell = """
set -ex
cdk destroy --force
klaxon --title orkestra --subtitle destroyed
"""

test-publish = "twine upload --repository testpypi dist/*"

publish.shell = """

twine upload dist/*
"""

pub.shell = """
set -x
pdm run format
pdm build
pdm run test-publish
pdm run publish
"""

docs = "mkdocs serve"
