[project]
authors = [
  {name = "Stephan Fitzpatrick", email = "knowsuchagency@gmail.com"},
]
dependencies = []
description = "The elegance of Airflow + the power of AWS"
dynamic = ["classifiers"]
keywords = ["orchestration", "aws", "cloud"]
license = {text = "MIT"}
name = "orkestra"
requires-python = ">=3.8"
version = "0.9.4"
readme = "README.md"

[project.urls]
Repository = "https://github.com/knowsuchagency/orkestra"
homepage = "https://github.com/knowsuchagency/orkestra"
Documentation = "https://knowsuchagency.github.io/orkestra/"

[project.optional-dependencies]
cdk = [
  "aws-cdk.core",
  "aws-cdk.aws_events",
  "aws-cdk.aws_events_targets",
  "aws-cdk.aws_lambda_python",
  "aws-cdk.aws_stepfunctions_tasks",

]
powertools = [
  "aws-lambda-powertools[pydantic]",
  # email is a required dependency
  # of powertools[pydantic]
  "pydantic[email]",
]

[build-system]
build-backend = "pdm.pep517.api"
requires = ["pdm-pep517"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.history
  | _build
  | buck-out
  | build
  | dist
  | __pypackages__
  | cdk.out
)/
'''

[tool.pdm.dev-dependencies]
dev = [
    "klaxon",
    "mkdocs-material",
    "pre-commit",
    "black",
    "aws-cdk.aws_apigateway",
    "mangum",
    "fastapi",
    "uvicorn",
    "boto3",
    "twine",
    "mkdocstrings",
    "aws-cdk.aws_batch",
    "aws-cdk.pipelines",
    "aws-cdk.aws_s3_deployment",
]
test = [
    "pytest",
    "coverage",
    "pytest-cov",
    "hypothesis",
    "boto3",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
markers = [
    "slow",
    "cdk",
    "powertools",
]

[tool.coverage.run]
source = [
    "orkestra"
]


[tool.pdm.scripts]
_.env_file = ".env"

format = "black ./"

synth = "cdk synth"

deploy.shell = """
set -ex
pdm run format
cdk deploy --verbose --require-approval=never
klaxon --title orkestra --subtitle deployed
"""

destroy.shell = """
set -ex
cdk destroy --force
klaxon --title orkestra --subtitle destroyed
"""

test-pypi = "twine upload --repository testpypi dist/*"

pypi = "twine upload dist/*"

publish.shell = """
set -x
pdm build
pdm run test-pypi
pdm run pypi || exit 0
"""

docs = "mkdocs serve"

unit-tests = "pytest tests/unit/"

integration-tests = "pytest tests/integration/"

api = "uvicorn examples.rest:app --reload"

install-hooks = "pre-commit install --install-hooks"

coverage-report.shell = """
pdm run coverage run -m pytest tests/unit/
coverage html
open htmlcov/index.html
"""

clean = "find . -iname '*.pyc' -delete"
